--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,3 +10,7 @@ $view-toolbar-width: 40px;
 $top-menu-height: 40px;
 /// Bottom Info
 $bottom-info-height: 25px;
+/// Right Sidebar
+$right-sidebar-width: 240px;
+/// Tab List
+$tab-list-height: 40px;
