Squashed commit of the following:
commit 9043223be7e92d5f12720321f7446d05e5f74336
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Mon Jul 4 21:01:18 2022 +0300

    edit right sidebar

--- a/src/components/ChartArea/ChartArea.module.scss
+++ b/src/components/ChartArea/ChartArea.module.scss
@@ -1,5 +1,6 @@
 .ChartArea {
   @include layout;
+  background-color: $white;
   height: calc(100% - $tab-list-height);
   width: 100%;
   bottom: $tab-list-height;
