--- a/src/components/Playground/Playground.module.scss
+++ b/src/components/Playground/Playground.module.scss
@@ -1,4 +1,4 @@
-.ReportPane {
+.Playground {
   @include layout;
   height: calc(100% - $top-menu-height - $bottom-info-height);
   width: calc(100% - $view-toolbar-width);
@@ -6,14 +6,14 @@
   top: $top-menu-height;
 }
 
-.ReportPaneSplit {
+.PlaygroundSplit {
   width: 100%;
   height: 100%;
   display: flex;
   position: relative;
 }
 
-.ReportPaneLeft {
+.PlaygroundLeft {
   width: 100%;
   height: 100%;
   position: relative;
