Squashed commit of the following:
commit 6a96be05f09ac1088bfbd1ba6354312d0bb1f700
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Tue Jul 5 14:51:25 2022 +0300

    minor fix

commit 1ff16eca4437485c18be70d8bfa9664013a97f52
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Tue Jul 5 14:50:03 2022 +0300

    add routing

--- a/src/components/ViewToolbar/ViewToolbar.module.scss
+++ b/src/components/ViewToolbar/ViewToolbar.module.scss
@@ -5,4 +5,12 @@
   left: 0;
   top: $top-menu-height;
   height: calc(100% - $top-menu-height - $bottom-info-height);
+
+  .NavLink {
+    display: block;
+
+    &.Active {
+      @include border($left: true, $color: $orange, $width: 0.2rem);
+    }
+  }
 }
