--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $primary-color: #f5f5f5;
 $secondary-color: #cccccc;
 $white: #ffffff;
 $dim-gray: #6d6d64;
+$orange: #f9690e;
 
 // UIs
 /// View Toolbar
