Squashed commit of the following:
commit 11fa88d7ac758dc2bed33e7abb163190de06844b
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Wed Jul 20 22:06:36 2022 +0300

    restructure the project

commit e3648cc1f09edf36d09ffa662cce6dcfa10f92e1
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Wed Jul 20 03:40:43 2022 +0300

    useFields

commit 9df2610a969ba9a56ef85babaea56f1eb9932ae6
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Wed Jul 20 02:33:39 2022 +0300

    pass chart data

commit ce0ceaa964b39a828bbe45f2e0fd108490414bb0
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Wed Jul 20 01:32:58 2022 +0300

    readquery and writequery

commit a5bcb6f97233d7f8e71b962830d0b8e9e74d9b19
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Tue Jul 19 22:25:50 2022 +0300

    add reactive var

commit 8447721e7bd5a6e90784c273cd12e1e52dab02bf
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Tue Jul 19 20:03:55 2022 +0300

    edit apollo queries

commit 475a0303cb3085c3e0784de3c129075a6458713f
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Tue Jul 19 03:13:18 2022 +0300

    use local fields

commit da4a974da823048643a208baca6c2c717d7387cd
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Tue Jul 19 01:43:53 2022 +0300

    new apollo queries

commit 48706f285a0279a8b993f30cecd9facb696497fe
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Mon Jul 18 22:23:40 2022 +0300

    fetch report data

commit 703ba2dc32c2f07b0a37745a35b422611bef7d2b
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Mon Jul 18 22:05:46 2022 +0300

    introduce ReportLoader

commit e4fc6e206375a8a7dc20ea788440ea5a1a7e391b
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Mon Jul 18 22:02:24 2022 +0300

    Report Sidebar

commit 5e50d84cea92b8bb2e76e6465b56507fd3e668fb
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Mon Jul 18 21:58:58 2022 +0300

    rename to ScaleOnCtrlWheel

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -3,6 +3,13 @@
   position: absolute;
 }
 
+@mixin centered() {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
 @mixin border ($width: 1px,
   $style: solid,
   $color: $secondary-color,
