Squashed commit of the following:
commit 477a02479dcbdcf7b73b10255bdf9bd382f94277
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Sat Jul 23 05:39:27 2022 +0300

    select chart

commit bf5b904de45e410720a0d86152d77eadfdc2034d
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Sat Jul 23 04:45:07 2022 +0300

    minor fix to vars

commit 9c3989eb2bbd68f66b0043b7bd99cdb515de6cf9
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Sat Jul 23 04:19:29 2022 +0300

    vars to single value

commit 3a57f92c38077139ffe3a20ab1bb2cf815dc4fe7
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Sat Jul 23 04:05:40 2022 +0300

    chart fragment

--- a/src/components/View/Report/Chart/Chart.module.scss
+++ b/src/components/View/Report/Chart/Chart.module.scss
@@ -1,3 +1,13 @@
 .Chart {
-  background-color: $primary-color;
+  width: 100%;
+  height: 100%;
+  @include border($top: true, $right: true,
+    $bottom: true, $left: true,
+    $style: dotted, $color: $secondary-color);
+}
+
+.ChartSelected {
+  @include border($top: true, $right: true,
+    $bottom: true, $left: true,
+    $style: dotted, $color: $orange);
 }
