--- a/src/components/View/Report/Chart/Chart.module.scss
+++ b/src/components/View/Report/Chart/Chart.module.scss
@@ -1,12 +1,17 @@
 .Chart {
-  width: 100%;
-  height: 100%;
+  background-color: $white;
   @include border($top: true, $right: true,
     $bottom: true, $left: true,
     $style: dotted, $color: $secondary-color);
 }
 
+.ChartInner {
+  width: 100%;
+  height: 100%;
+}
+
 .ChartSelected {
+  z-index: 1;
   @include border($top: true, $right: true,
     $bottom: true, $left: true,
     $style: dotted, $color: $orange);
