Squashed commit of the following:
commit 4acaee6bb71c9952b11ab1956b15a782b33cdf34
Author: Nikolay Tyukaev <ntyukaev@gmail.com>
Date:   Mon Aug 22 19:08:26 2022 +0300

    add sheet btn

--- a/src/components/SheetList/SheetList.module.scss
+++ b/src/components/SheetList/SheetList.module.scss
@@ -1,3 +1,11 @@
+.SheetList {
+  height: 100%;
+}
+
+.SheetListAddSheet {
+  display: inline-block;
+}
+
 .SheetActive {
   @include border($bottom: true, $color: $orange, $width: 0.2rem);
 }
